# py-web-hw7

./: Dockerfile  README.md  alembic.ini  config.ini  docker-compose.yml  main.py  my_select.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0f40fdfb64f0_init.py  1eaa9c23450c_init.py  b1712c7c8f37_init.py
data/: university.db
data_generation/: initial_data_seed.py
database/: db_config.py  uni_models.py
fake_subject_and_group/: fake_group_name.py  fake_subject.py  subject_group.py
models/: uni_models.py
py-web-hw7/: alembic.ini  docker-compose.yml  fake_subject_and_group.py  pyproject.toml  requirements.txt
py-web-hw7/data_generation/: initial_data_seed.py
py-web-hw7/models/: uni_models.py
py-web-hw7/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
seeds/: seed.py
