[tool.poetry]
name = "py_web_sql_alchemy_hw7"
version = "0.1"
description = "This project aims to generate a SQLite database with fake data and execute SQL queries on it. The project consists of multiple Python files and SQL query files to handle the database creation, data generation, and query execution."
authors = ["Dmytro Klymenko <klimenko.dmitris@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "py_web sql_alchemy (hw_7)"}]

[tool.poetry.dependencies]
python = "3.11.4"
prettytable = "^3.8.0"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
faker = "^19.3.1"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
